--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "matplotlib": "^1.0.0",
+    "nbformat": "^0.0.2",
     "numpy": "^0.0.1",
     "pandas": "^0.0.3",
     "plotly": "^1.0.6",
