Added overarching sections "Introduction" etc.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ Loan_Modelling.csv
 # My file submission that's a pretty rough working copy
 *AIML_ML_Project_full_code_notebook.ipynb
 
+# Great Learning's copyrighted notebook on Decision Trees in general
+*ML_Week2_DecisionTree_Notebook.ipynb
+
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
